--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ MYSQL_PASSWORD=Atharva061199@
 MYSQL_DATABASE=LLM_Resume
 
 # DeepSeek API key
-DEEPSEEK_KEY=sk-e43363c8b45c4a68b8514c4d2b73a7ee
-GOOGLE_API_KEY=AIzaSyD3svLTtdwSbO0vOmupt0ysj62twG4p-5c
+DEEPSEEK_KEY=
+GOOGLE_API_KEY=
 GEMINI_EMBED_MODEL=embedding-001
-GEMINI_API_KEY=AIzaSyD3svLTtdwSbO0vOmupt0ysj62twG4p-5c
+GEMINI_API_KEY=
